# autocode

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.dev.yml
.specs/: constitution.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  codes.py  coding.py  exports.py  health.py  patients.py  sessions.py  standards.py
backend/app/core/: dependencies.py  exceptions.py  middleware.py  multitenancy.py  security.py
backend/app/core/auth/: middleware.py  sso.py
backend/app/db/: session.py  vector.py
backend/app/ingestion/: __init__.py  pipeline.py
backend/app/ingestion/loaders/: __init__.py  relational_loader.py  vector_loader.py
backend/app/ingestion/parsers/: __init__.py  drug.py  eindex.py  index.py  neoplasm.py  tabular.py
backend/app/models/: __init__.py  audit_log.py  base.py  coding_result.py  coding_session.py  coding_standard.py  export.py  icd_code.py  icd_index_entry.py  patient.py  tenant.py  user.py
backend/app/rag/: embeddings.py  pipeline.py  reranker.py  retriever.py
backend/app/rag/chunking/: __init__.py  icd10cm.py  strategy.py
backend/app/rag/llm/: anthropic.py  base.py  factory.py  openai.py  prompts.py
backend/app/schemas/: admin.py  codes.py  coding.py  common.py  export.py  patient.py  session.py
backend/app/services/: audit_service.py  coding_service.py  export_service.py  patient_service.py  session_service.py
backend/scripts/: ingest_icd10cm.py
frontend/: package.json  (+3 more)
(+148 files in other folders)
